--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.0.6
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
+  provider: ^6.1.1
   
 
 dev_dependencies:
