--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
   provider: ^6.1.1
+  firebase_storage: ^11.6.0
   
 
 dev_dependencies:
